[tool.poetry]
name = "flojoy"
version = "0.2.0"
description = "Python client library for Flojoy."
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
huggingface-hub = "^0.16.4"
cloudpickle = "^2.2.1"
keyring = "^24.2.0"
numpy = "^1.25.2"
pandas = "^2.0.3"
plotly = "^5.15.0"
pyyaml = "^6.0.1"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
scipy = "^1.11.1"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
