[tool.poetry]
name = "flojoy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pydantic = "^2.3.0"
keyring = "^24.2.0"
huggingface-hub = "^0.16.4"
cloudpickle = "^2.2.1"
scipy = "^1.11.2"
numpy = "^1.25.2"
pandas = "^2.0.3"
plotly = "^5.16.1"
pyyaml = "^6.0.1"
requests = "^2.31.0"
python-box = "^7.1.1"
python-dotenv = "^1.0.0"
pillow = "^10.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
