[tool.poetry]
authors = [
  "Jack Palmer <jp@flojoy.io>",
  "Joey Yu <joey@flojoy.io>",
  "Jeff Zhang <jeff@flojoy.io>",
  "Syed Mahbub <smahmed776@gmail.com>",
  "Dallas Strandell <dalstrande@outlook.com>",
]
name = "flojoy"
version = "0.1.5"
description = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "1.4.2"
numpy = "1.23.0"
plotly = "5.8.2"
pillow = "9.5.0"
python-dotenv = "^1.0.0"
pyyaml = "6.0"
requests = "2.28.1"
keyring = "24.2.0"
python-box = "6.0.0"
pydantic = "2.3.0"
huggingface-hub = "0.16.4"
cloudpickle = "2.2.1"
networkx = "2.8.4"
scipy = "1.9.3"
matplotlib = "3.5.2"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
